# traffic-congestion-analysis

./: .gitignore  Makefile  README.md  download.py
.github/workflows/: build.yaml  ci.yaml
apps/pipeline/: .conda_config  .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt
apps/pipeline/src/: __init__.py  jobs.py  sensors.py
apps/pipeline/src/assets/: __init__.py  analytic.py  processing.py  serving.py  visualize.py
apps/pipeline/src/assets/analytic/: __init__.py
apps/pipeline/src/assets/batch/: processing.py  serving.py
apps/pipeline/src/assets/processing/: __init__.py
apps/pipeline/src/assets/stream/: consumer.py  producer.py  streaming.py
apps/pipeline/src/assets/visualize/: __init__.py
apps/pipeline/src/resources/: __init__.py  clickhouse.py  dask.py
apps/stream/: .conda_config  Dockerfile  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
apps/stream/src/: __main__.py  consumer.py  producer.py
apps/stream_producer/: pyproject.toml
apps/stream_producer/src/: consumer.py
cluster/apps/clickhouse/: values.yaml
cluster/apps/dagster/: configmap.yaml  values.yaml
cluster/apps/dask/: values.yaml
cluster/apps/kafka/: values.yaml
cluster/apps/minio/: service.yaml  values.yaml
cluster/apps/spark/: values.yaml
cluster/apps/superset/: values.yaml
cluster/dagster/: configmap.yaml  values.yaml
cluster/dask/: values.yaml
cluster/ingress/: ingress.yaml
cluster/monitoring/grafana/: values.yaml
cluster/monitoring/prometheus/: values.yaml
docker/: clickhouse.yaml  kafka.yaml  stream.yaml
