[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["datvodinh <vodinhdat03@gmail.com>"]
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dagster = "^1.8.11"
dagster-webserver = "^1.8.11"
dagster-k8s = "^0.25.0"
dagster-aws = "^0.25.0"
pyspark = "^3.5.3"


[tool.poetry.group.dev.dependencies]
deptry = "^0.20.0"
ruff = "^0.7.2"

[tool.deptry.per_rule_ignores]
DEP002 = ["dagster", "dagster-webserver", "dagster-k8s", "dagster-aws", "pyspark"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "src"