[tool.poetry]
name = "traffic-pipeline"
version = "0.1.0"
description = ""
authors = ["datvodinh <vodinhdat03@gmail.com>"]
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dagster = "^1.8.11"
dagster-webserver = "^1.8.11"
dagster-k8s = "^0.25.0"
dagster-aws = "^0.25.0"
pandas = "^2.2.3"
clickhouse-connect = "^0.8.9"
dask = {extras = ["complete", "dataframe", "distributed"], version = "^2024.12.0"}
python-dotenv = "^1.0.1"
s3fs = "^2024.10.0"
bokeh = "^3.6.2"
matplotlib = "^3.9.3"


[tool.poetry.group.dev.dependencies]
deptry = "^0.20.0"
ruff = "^0.7.2"

[tool.deptry.per_rule_ignores]
DEP002 = ["dagster", "dagster-webserver", "dagster-k8s", "dagster-aws", "dask", "clickhouse-connect", "pandas", "s3fs", "matplotlib", "bokeh"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "src"